PROJECT(wallpaper)

FIND_PACKAGE(KDE4 REQUIRED)
INCLUDE(KDE4Defaults)
 
ADD_DEFINITIONS(${QT_DEFINITIONS} ${KDE4_DEFINITIONS})
INCLUDE_DIRECTORIES(
   ${CMAKE_SOURCE_DIR}
   ${CMAKE_BINARY_DIR}
   ${KDE4_INCLUDES}
   )
 
SET(wallpaper_SRCS main.cpp window.cpp)
 
KDE4_ADD_EXECUTABLE(wallpaper ${wallpaper_SRCS})
 
TARGET_LINK_LIBRARIES(wallpaper 
		      ${KDE4_KDEUI_LIBS} ${KDE4_KPARTS_LIBS} ${KDE4_PLASMA_LIBS})

INSTALL(TARGETS wallpaper
	DESTINATION ${INSTALL_TARGETS_DEFAULT_ARGS})